Save procedures history log
RISDEV-7248